# zed-agy

./: Cargo.toml  README.md  compile.sh
assets/settings/: default.json
crates/cursor_proxy/: Cargo.toml
crates/cursor_proxy/src/: agent.rs  config.rs  cursor_proxy.rs  http.rs  main.rs  models.rs  prompt.rs  stream.rs  tools.rs
crates/icons/src/: icons.rs
crates/language_models/: Cargo.toml
crates/language_models/src/: language_models.rs  provider.rs  settings.rs
crates/language_models/src/provider/: antigravity.rs  cursor.rs  xai_subscribed.rs
crates/settings_content/src/: language_model.rs
