[package]
name = "cursor_proxy"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[[bin]]
name = "cursor-proxy"
path = "src/main.rs"

[lib]
path = "src/cursor_proxy.rs"

[dependencies]
anyhow.workspace = true
axum = { version = "0.7", features = ["json"] }
dirs.workspace = true
env_logger = "0.11"
futures.workspace = true
log.workspace = true
paths.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.5", features = ["cors"] }
which.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
